fix alignment on about page

--- a/static/css/about.less
+++ b/static/css/about.less
@@ -39,3 +39,13 @@
 .about-blocks p {
   padding-top:25px;
 }
+
+div.col-md-6.double-par > p {
+  float: right;
+  padding-right: 25px
+}
+
+div.col-md-6.double-par-2 > p {
+  float: left;
+  padding-left: 50px;
+}
